--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,9 @@
         <ul class="nav navbar-nav">
         <li><a href="/users">All Users</a></li>
         <li><a href="/photos">All Posts</a></li>
-        <li><a href="/likes">My Likes</a></li>
+        <li><a href="/my_likes">My Likes</a></li>
         <li><a href="/photos">My Wall</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
+          
           
           <% if current_user.present? %>
           <li><a href="/users/edit">Edit Profile</a></li>
