--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,5 @@
-  
 <div class="page-header">
-  <h1>
-  </h1>
+  <h1></h1>
 </div>
 <div class="container">
 
@@ -12,19 +10,20 @@
   <div class="panel-heading">
   <h3 class="panel-title">All Users</h3>
 </div
-
-  </div>
+</div>
+   
     <table class="table table">
-      
-      <% @users.each do |user| %>
+       <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <a href="/user/<%= user.id %>">
-         
-  
+      <td>
+       <a href="">
+        <%= user.username %>
+        </a>
+        </td>
       </tr>
       <% end %>
     </table>
   </div>
 </div>
 
+  
