--- a/app/views/photos/my_likes.html.erb
+++ b/app/views/photos/my_likes.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1>
-    Photos
-    <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
+    My Likes
+   
   </h1>
 </div>
 
