--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,4 @@
-<div class="page-header">
+ <div class="page-header">
   <h3>Photo #<%= @photo.id %></h3>
 </div>
 
@@ -13,6 +13,50 @@
 
       <dt>User</dt>
       <dd><%= @photo.user_id %></dd>
+
+      <dt>Comments</dt>
+      <dd>
+        <ul>
+          <% @photo.comments.each do |comment| %>
+          <li>
+          <h6><%= comment.user.username %>
+          <small>
+            <%= time_ago_in_words(comment.created_at) %> ago
+          </small>
+          </h6>
+          <p><%= comment.body %></p>
+          </li>
+
+          <% end %>
+          <li>
+            <form action="/create_comment" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for photo_id -->
+      <input type="hidden" name = "photo_id" value="<%= @photo.id %>">
+      <input type="hidden" name = "user_id" value="<%= current_user .id %>">
+
+      <!-- Label and input for body -->
+      <div class="form-group">
+        <label for="body" class="sr-only">
+        </label>
+
+       <input type="text" id="body" name="body" placeholder="Add a comment ..." class="form control">
+      </div>
+
+      <!-- Label and input for user_id -->
+  
+
+      <button class="btn btn-success">
+        Create Comment
+      </button>
+      or
+      <a href="/comments">Cancel</a>
+    </form>
+          </li>
+        </ul>
+      </dd>
 
     </dl>
 
